Fix sheet sizing and superfluous scrollbars

--- a/css/openlegend.css
+++ b/css/openlegend.css
@@ -330,7 +330,7 @@
   grid-row: 1/3;
   border: 4px groove #eeede0;
   background-color: rgba(255, 196, 0, 0.35);
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
 }
 
@@ -344,7 +344,7 @@
   grid-row: 3/5;
   border: 4px groove #eeede0;
   background-color: rgba(133, 133, 133, 0.25);
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
 }
 
